--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@ updates:
   schedule:
     interval: daily
     time: "06:00"
-    timezone: "Asia/Jakarta"
+    timezone: "Asia/Jakarta" #dependabot
   labels:
     - "dependencies"
   open-pull-requests-limit: 20
